[package]
name = "poem-sample-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
poem = { version = "3.1.6", features = ["test"] }
poem-grants = "3.0.2"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

